tests/snapshots/cli__subcommand_not_provided_snapshot_passes.snap
---
source: tests/cli.rs
assertion_line: 61
info:
  program: pace
  args: []
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
pace - Mindful Time Tracking: Simplify Your Focus and Boost Productivity Effortlessly.

Usage: pace.exe [OPTIONS] <COMMAND>

Commands:
  adjust  📝 Adjust the details of an activity, such as its category, description, or tags
              [aliases: a]
  begin   ⌚ Starts tracking time for an activity [aliases: b]
  end     ⏹️  Stops time tracking for the most recent or all activities [aliases: e]
  hold    ⏸️  Pauses the time tracking for the most recent active activity [aliases: h]
  now     ⏲️  Shows you at a glance what you're currently tracking [aliases: n]
  resume  ⏯️  Resumes a previously paused activity, allowing you to continue where you left off
              [aliases: r]
  review  📈 Get sophisticated insights on your activities [aliases: rev]
  setup   🛠️  Set up a pace configuration, a new project, or generate shell completions
              [aliases: s]
  docs    📚 Open the online documentation for pace [aliases: d]
  help    Print this message or the help of the given subcommand(s)

Options:
  -v, --verbose
          Enable verbose logging
      --config <CONFIG>
          Use the specified config file [env: PACE_CONFIG_FILE=]
      --activity-log-file <ACTIVITY_LOG_FILE>
          Use the specified activity log file [env: PACE_ACTIVITY_LOG_FILE=]
      --home <HOME>
          Pace Home Directory [env: PACE_HOME=]
  -h, --help
          Print help
  -V, --version
          Print version
