tests/snapshots/cli__version_snapshot_passes.snap
---
source: tests/cli.rs
info:
  program: pace
  args:
    - "--version"
---
success: true
exit_code: 0
----- stdout -----
pace 0.11.0

----- stderr -----
